--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css"
     />
-    <link rel="stylesheet" href="/asset/style/style.css" />
+    <link rel="stylesheet" href="asset/style/style.css" />
   </head>
   <body>
     <div class="header-wrapper">
@@ -126,7 +126,7 @@
             <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, modi!</span>
           </div>
         </li>
-        
+        <br />
         
       </ul>
     </section>
@@ -151,6 +151,6 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
 
-    <script src="/asset/js/index.js"></script>
+    <script src="asset/js/index.js"></script>
   </body>
 </html>
