changes svg color, and arrow to main button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="header-wrapper">
       <div class="logo">Sigal Sweets</div>
       <ul class="nav-menu">
-        <li>מי אני</li>
+        
         <li>העבודות שלי</li>
         <li>צור קשר</li>
       </ul>
@@ -36,7 +36,7 @@
               
               class="button-contact"
             >
-              צור קשר
+             &larr; צור קשר
             </button>
           </li>
           <li class="cake-svg">
