More minor links changes

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <div class="logo">Sigal Sweets</div>
       <ul class="nav-menu">
         
-        <li>העבודות שלי</li>
-        <li>צור קשר</li>
+        <li><a href="#my_works">העבודות שלי</a></li>
+        <li><a href="#contact">צור קשר</a></li>
       </ul>
     </div>
 
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-    <section class="my_works">
+    <section class="my_works" id="my_works">
       <h2 data-aos="fade-in" data-aos-duration="1500">העבודות שלי</h2>
       <ul class="photos">
         <li data-aos="fade-in" data-aos-duration="2000" class="card">
@@ -130,7 +130,7 @@
       </ul>
     </section>
 
-    <section class="contact">
+    <section class="contact" id="contact">
       <ul>
         <li>
           <h3 data-aos="fade-in" data-aos-duration="1500">צור קשר</h3>
